# thesis

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: smoke_benchmark.json
docs/: experiment_protocol.md  formal_progress_report.md
docs/report/: build_report.sh  generate_report_assets.py  generate_thesis_assets.py  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
notebooks/: rbsog_benchmark_template.ipynb
results/ablation_jit_off_smoke/: benchmark_runs.csv  benchmark_summary.csv  benchmark_summary.json
results/ablation_jit_on_smoke/: benchmark_runs.csv  benchmark_summary.csv  benchmark_summary.json
results/bench_batch4_smoke/: benchmark_runs.csv  benchmark_summary.csv  benchmark_summary.json
results/bench_final_smoke/: benchmark_runs.csv  benchmark_summary.csv  benchmark_summary.json
results/bench_small/: benchmark_runs.csv  benchmark_summary.csv  benchmark_summary.json
results/run_batch4_smoke/: kernel_report.json  metrics.csv  run_config.json  stability_summary.json  stability_timeseries.csv  summary.json
results/run_final_smoke/: kernel_report.json  metrics.csv  run_config.json  stability_summary.json  stability_timeseries.csv  summary.json
results/run_stability_smoke/: kernel_report.json  metrics.csv  run_config.json  stability_summary.json  stability_timeseries.csv  summary.json
results/single_rbsog/: kernel_report.json  metrics.csv  run_config.json  stability_summary.json  stability_timeseries.csv  summary.json
results/smoke_bench/: benchmark_runs.csv  (+2 more)
thesis_template/: Thesis.tex  build_public_thesis.sh
(+1244 files in other folders)
