[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rbsog-md"
version = "0.1.0"
description = "Minimal RBSOG molecular dynamics benchmark prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.9"
]

[project.optional-dependencies]
analysis = [
  "jupyter>=1.1"
]
performance = [
  "numba>=0.61"
]

[project.scripts]
rbsog-md = "rbsog_md.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
